Fixed alignment and refactoring

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -53,9 +53,6 @@ p{
   line-height: 28px;
 /* identical to box height, or 175% */
 }
-.App {
-  text-align: center;
-}
 
 .lavantruPink{
   color:#b8627d
@@ -217,12 +214,13 @@ span.googleButtonText {
  width: 150px;
  border: 5px solid #0f7d80;
  object-fit: cover;
- margin: 10px;
+ margin: 16px;
 }
 .profile .header{
-  background-color: #ffe6de;
-  border-radius: 4px;
-  overflow: overlay;
+  border-bottom: 1px solid grey;
+  margin:24px;
+  color: #0f7d80;
+  background: #ffe6de ;
 }
 
 .orderHeader{
@@ -235,84 +233,32 @@ span.googleButtonText {
   font-size: 1.3em;
 }
 
-.washerList{
-  width: max-content;
-}
-
 .washerList .washerListItem{
-  border-bottom: 0.5px solid grey;
-  margin-top: 10px;
-  padding-bottom: 35px;
+  border-bottom: 1px solid grey;
   color: #0f7d80;
+  /* background: #ffe6de ; */
 }
 
 .washerListItem .unitImage {
- float: left;
  border-radius: 50%;
- height: 140px;
- width: 140px;
+ height: 150px;
+ width: 150px;
  border: 5px solid #0f7d80;
  object-fit: cover;
- margin-top: 15px;
- margin-right: 2px;
- margin-left: 10px;
-
-
+ margin:16px;
 }
-
-.washerListItem .align-details{
-
-  text-align: left;
-
-
-}
-
-.washerListItem .align-name{
-  font-size: x-large;
-  font-weight: 500;
-  margin-top: 15px;
-
-}
-
-.washerListItem .align-city {
-  margin-top: 15px;
-  margin-bottom: 5px;
-  padding-left: 0.5%;
-}
-
-.washerListItem .align-jobs
-{
-  margin-left: inherit;
-  height: auto;
-  width: fit-content;
-  padding-left: 0.2%;
-  margin-top: 3px;
-  white-space: nowrap;
-
-}
-
-
-
 
 .washerListItem .unitLaundryJobs {
-
-  text-align: left;
   border-radius: 10px;
-  /* border: 1px solid #b8617c; */
   background-color: #b8617c;
-  font-size: small;
   color: #ffe6de;
   white-space: nowrap;
   width: fit-content;
-  margin-left: 0px;
-  margin-right: 5px;
-  margin-bottom: 5px;
-  /* margin: 2px; */
+  padding:4px 8px;
 }
-
-  .washerListItem .align-button{
-    vertical-align: middle;
-  }
+.washerListItem .content {
+width: 100% !important ;
+ }
 span.iconExtraNotes{
   background: url("./asset/extra_notes.svg") transparent no-repeat;
   display: inline-block;
@@ -324,5 +270,5 @@ span.iconExtraNotes{
   cursor: pointer;
 }
 .washerMap{
-  height:80vh
+  height:80vh;
 }
